
2008-07-13  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #5476: links entered in <th>-tag with the RTE are not parsed on the frontend because parseFunc doesn't recognize <th> as cells (thanks to Daniel Ellermann)
	* Fixed bug #8682: no result check for setlocale via TypoScript
	* Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc

2008-07-12  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8864: Allow TS config.absRefPrefix to work with resources in typo3conf/ext. Make it work with a changed location of fileadmin/. (fix by Bejamin Mack)
	* Fixed bug #8833: TCA "check" type field checkboxes have no labels when in 1-column display (thanks to Francois Suter)
	* Fixed bug #8948: phpDoc @internal hides public functions of t3lib_div in Eclipse
	* Fixed bug #8922: setStage operation of t3lib_TCAmain::process_cmdmap() overwrites $id parameter making it inaccessible for post-processing hooks 

2008-07-11  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8941: Fixed an uninitialized array that might lead to PHP warning (Thanks to Ralf Hettinger)

2008-07-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8851: navFrameScript is not loaded for submodules (thanks to Christian Ehret)
	* Fixed bug #8904: Menu of subpages renders target="{$content.pageFrameObj}" (Thanks to Steffen Kamper)

2008-07-07  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8703: More Options>Access wasn't being shown in the pages click-menus (Thanks to Andreas Wagner)

2008-07-03  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #7711: Element browser ignores "Hide in menu" flag (Thanks to Christian Kuhn)
	* Fixed bug #8840: Wrong title of edit icon of "Include basis template" section when editing template records (Thanks to Christian Kuhn)

2008-07-01  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8506: Fileadmins folder overview need a gap between folder path and file amount (Thanks to Stefano Kowalke)

2008-06-29  Stanislas Rolland  <typo3@sjbr.ca>
