@@ -98,9 +98,23 @@ Do you want to continue WITHOUT saving?</label>
 			<label index="ver.swapPage">Publish this version of the page including content</label>
 			<label index="TYPO3_Element_Browser">TYPO3 Element Browser</label>
 			<label index="show_item.php.viewItem">View Item</label>
+			<label index="show_item.php.referencesToThisItem">References to this item:</label>
+			<label index="show_item.php.referencesFromThisItem">References from this item:</label>
 			<label index="show_item.php.file">File</label>
 			<label index="show_item.php.dimensions">Dimensions</label>
 			<label index="show_item.php.filesize">Size</label>
+			<label index="show_item.php.pixels">Pixels</label>
+			<label index="show_item.php.files">files</label>
+			<label index="show_item.php.cannotDisplayArchive">Sorry, TYPO3_CONF_VARS[BE][disable_exec_function] was set, so cannot display content of archive file.</label>
+			<label index="show_item.php.table">Table:</label>
+			<label index="show_item.php.uid">Uid:</label>
+			<label index="show_item.php.field">Field:</label>
+			<label index="show_item.php.flexpointer">Flexpointer:</label>
+			<label index="show_item.php.softrefKey">Softref Key:</label>
+			<label index="show_item.php.sorting">Sorting:</label>
+			<label index="show_item.php.refTable">Ref Table:</label>
+			<label index="show_item.php.refUid">Ref Uid:</label>
+			<label index="show_item.php.refString">Ref String:</label>
 			<label index="show_item.php.ftp_area">FTP AREA</label>
 			<label index="db_new.php.pagetitle">New record</label>
 			<label index="db_new.php.after">after</label>
