@@ -4,6 +4,7 @@
 	* Fixed bug #5476: links entered in <th>-tag with the RTE are not parsed on the frontend because parseFunc doesn't recognize <th> as cells (thanks to Daniel Ellermann)
 	* Fixed bug #8682: no result check for setlocale via TypoScript
 	* Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc
+	* Fixed bug #8510: Hardcoded labels in typo3/show_item.php (thanks to Christopher Stelmaszyk)
 
 2008-07-12  Martin Kutschker  <masi@typo3.org>
 
